--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-session": "^1.4.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
     "http-errors": "^1.7.2"
   }
 }
